fixup spacing

--- a/src/client/components/features/ContratEngagementJeune/Témoignages/Témoignages.module.scss
+++ b/src/client/components/features/ContratEngagementJeune/Témoignages/Témoignages.module.scss
@@ -33,6 +33,7 @@
 
     & + & {
       padding-top: 0;
+      margin-top: -3em;
     }
 
     & + & article {
